# dpmsnotify

./: Makefile.am  README.rst  autogen.sh  configure.ac  dpmsnotify.c
